--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongoose": "^6.6.5",
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
-    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
@@ -32,6 +32,8 @@
     "@types/express": "^4.17.21",
     "@types/gravatar": "^1.8.3",
     "@types/jsonwebtoken": "^8.5.9",
-    "concurrently": "^7.4.0"
+    "@types/swagger-jsdoc": "^6.0.4",
+    "concurrently": "^7.4.0",
+    "swagger-autogen": "^2.23.7"
   }
 }
