--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
